manifests/mindcoach-db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mindcoach
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mindcoach-db-statefulset
  namespace: mindcoach
spec:
  serviceName: mindcoach-db-service
  replicas: 1
  selector:
    matchLabels:
      app: mindcoach-db
  template:
    metadata:
      labels:
        app: mindcoach-db
    spec:
      securityContext:
        fsGroup: 65534
      containers:
      - name: mindcoach-db
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mindcoach-db-storage
          mountPath: /var/lib/mysql
        - name: mysql-custom-configmap
          mountPath: /etc/mysql/conf.d/mysql-custom.cnf
          subPath: mysql-custom.cnf
        resources:
          limits:
            cpu: 1.5
            memory: 2048Mi
          requests:
            cpu: 0.75
            memory: 1024Mi
      volumes:
      - name: mindcoach-db-storage
        persistentVolumeClaim:
          claimName: hostpath-pvc-retain-mindcoach-db
      - name: mysql-custom-configmap
        configMap:
          name: mindcoach-db-mysql-custom-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mindcoach-db-service
  namespace: mindcoach
spec:
  selector:
    app: mindcoach-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
