manifests/mindcoach-be-dotnet-service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mindcoach
---
    # }
    #     {
    #   "Logging": {
    #     "LogLevel": {
    #       "Default": "Information",
    #       "Microsoft.AspNetCore": "Warning"
    #     }
    #   },
    #   "AllowedHosts": "*",
    #   "JwtSettings": {
    #     "Secret": "secret-nay-cuc-ky-manh-luon-ha-aaaaaaaaaaaaaaaa",
    #     "ExpiryMinutes": 60,
    #     "Issuer": "MindCoach",
    #     "Audience": "MindCoach"
    #   },
    #   "ConnectionStrings": {
    #     "Default": "Server=${MYSQLDB_HOST};User ID=${MYSQLDB_USERNAME};Password=${MYSQLDB_PASSWORD};Database=${MYSQLDB_DB}"
        # "Default": "Server=mindcoach-db-service;User ID=mixcre;Password=Mixcre123;Database=MindCoachDB"
    #   }
    # }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mindcoach-dotnet-service
  name: mindcoach-dotnet-service-deployment
  namespace: mindcoach
spec:
  selector:
    matchLabels:
      app: mindcoach-dotnet-service
  template:
    metadata:
      labels:
        app: mindcoach-dotnet-service
    spec:
      containers:
      - name: mindcoach-dotnet-service
        image: mixcre/mindcoach_dotnet
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: tcp
          protocol: TCP
        resources:
          limits:
            cpu: 1.5
            memory: 2048Mi
          requests:
            cpu: 0.75
            memory: 1024Mi
        volumeMounts:
        - name: appsettings-production-configmap-volume
          mountPath: /app/appsettings.Production.json
          subPath: appsettings.Production.json
      volumes:
      - name: appsettings-production-configmap-volume
        configMap:
          name: mindcoach-dotnet-service-appsettings-production-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: mindcoach-dotnet-service-service
  namespace: mindcoach
spec:
  type: ClusterIP
  selector:
    app: mindcoach-dotnet-service
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mindcoach-dotnet-service-ingress
  namespace: mindcoach
spec:
  ingressClassName: nginx
  rules:
    - host: mindcoach-dotnet.service
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: mindcoach-dotnet-service-service
                port:
                  number: 7001
            path: /
