manifests/mindcoach-fe-service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mindcoach
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mindcoach-fe-service
  name: mindcoach-fe-service-deployment
  namespace: mindcoach
spec:
  selector:
    matchLabels:
      app: mindcoach-fe-service
  template:
    metadata:
      labels:
        app: mindcoach-fe-service
    spec:
      containers:
      - name: mindcoach-fe-service
        image: mixcre/mindcoach_fe
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: tcp
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1024Mi
          requests:
            cpu: 0.5
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mindcoach-fe-service-service
  namespace: mindcoach
spec:
  type: ClusterIP
  selector:
    app: mindcoach-fe-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mindcoach-fe-service-ingress
  namespace: mindcoach
spec:
  ingressClassName: nginx
  rules:
    - host: mindcoach.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: mindcoach-fe-service-service
                port:
                  number: 80
            path: /
